--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Notify Slack for Team PRs
+name: Notify Slack for Team-Owned PRs
 
 on:
   pull_request:
@@ -8,36 +8,54 @@ jobs:
   notify-slack:
     runs-on: ubuntu-latest
     steps:
-      - name: Check team membership
-        id: check_team
+      - name: Check PR author is in team
+        id: check_team_member
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORG: ckiser-test-organization
           TEAM_SLUG: pr-notify-team
           USERNAME: ${{ github.event.pull_request.user.login }}
         run: |
+          echo "Checking if $USERNAME is a member of $ORG/$TEAM_SLUG..."
           RESPONSE=$(curl -s -H "Authorization: Bearer $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
             "https://api.github.com/orgs/$ORG/teams/$TEAM_SLUG/memberships/$USERNAME")
 
-          echo "API response: $RESPONSE"
-
-          STATE=$(echo "$RESPONSE" | jq -r '.state')
-
-          if [ "$STATE" = "active" ]; then
-            echo "is_member=true" >> $GITHUB_OUTPUT
-          else
-            echo "is_member=false" >> $GITHUB_OUTPUT
+          STATE=$(echo "$RESPONSE" | jq -r '.state // "none"')
+          if [ "$STATE" != "active" ]; then
+            echo "❌ $USERNAME is not a member of $TEAM_SLUG — stopping workflow."
+            exit 0
           fi
+          echo "✅ $USERNAME is a member of $TEAM_SLUG."
+
+      - name: Check if repo is owned by team
+        id: check_repo
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORG: ckiser-test-organization
+          TEAM_SLUG: pr-notify-team
+          REPO: ${{ github.repository }}
+        run: |
+          echo "Checking if $REPO is managed by $ORG/$TEAM_SLUG..."
+          RESPONSE=$(curl -s -H "Authorization: Bearer $GH_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            "https://api.github.com/orgs/$ORG/teams/$TEAM_SLUG/repos/$REPO")
+
+          PERMISSION=$(echo "$RESPONSE" | jq -r '.permissions.push // "none"')
+
+          if [ "$PERMISSION" != "true" ]; then
+            echo "❌ $REPO is not owned by $TEAM_SLUG — stopping workflow."
+            exit 0
+          fi
+          echo "✅ $REPO is owned by $TEAM_SLUG."
 
       - name: Send message to Slack
-        if: steps.check_team.outputs.is_member == 'true'
         run: |
           PR_TITLE="${{ github.event.pull_request.title }}"
           PR_URL="${{ github.event.pull_request.html_url }}"
           PR_AUTHOR="${{ github.event.pull_request.user.login }}"
 
-          MESSAGE="📢 New PR opened by *${PR_AUTHOR}*:\n<${PR_URL}|${PR_TITLE}>"
+          MESSAGE="📢 New PR in *${{ github.repository }}* by *${PR_AUTHOR}*:\n<${PR_URL}|${PR_TITLE}>"
 
           curl -X POST -H 'Content-type: application/json' \
           --data "{\"text\":\"${MESSAGE}\"}" \
